@@ -1,3 +1,7 @@
+1999-01-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gnomine.c: Kill file menu.
+
 1999-01-09  Nat Friedman  <nat@nat.org>
 
 	* gnomine.c (main): Install an appbar.  Setup menu hints.  Not
